# cmake-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
code/cmake/: GenerateDocs.cmake
code/src/: CMakeLists.txt
code/src/PROJECT_NAME/: CMakeLists.txt
code/tests/: CMakeLists.txt
code/tests/PROJECT_NAME/: CMakeLists.txt
